--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,18 @@
         <artifactId>poi-ooxml</artifactId>
         <version>3.15</version>
     </dependency>
+    <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-util</artifactId>
+        <version>6.1.25</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20180813</version>
+    </dependency>
+
 
 </dependencies>
 
